@@ -62,8 +62,6 @@ class Preferences(object):
     keepEmptyRules = False
         defines if empty rules like e.g. ``a {}`` are kept in the resulting
         serialized sheet
-    keepLeadingZero = True
-        defines if values between -1 and 1 should omit the 0, like ``.5px``
     keepUnknownAtRules = True
         defines if unknown @rules like e.g. ``@three-dee {}`` are kept in the
         serialized sheet
@@ -83,6 +81,8 @@ class Preferences(object):
         used as being normalized anyway)
     omitLastSemicolon = True
         If ``True`` omits ; after last property of CSSStyleDeclaration
+    omitLeadingZero = False
+        defines if values between -1 and 1 should omit the 0, like ``.5px``
     paranthesisSpacer = u' '
         string which is used before an opening paranthesis like in a
         ``css.CSSMediaRule`` or ``css.CSSStyleRule``
@@ -133,13 +133,13 @@ class Preferences(object):
         self.keepAllProperties = True
         self.keepComments = True
         self.keepEmptyRules = False
-        self.keepLeadingZero = True
         self.keepUnknownAtRules = True
         self.keepUsedNamespaceRulesOnly = False
         self.lineNumbers = False
         self.lineSeparator = u'\n'
         self.listItemSpacer = u' '
         self.normalizedVarNames = True
+        self.omitLeadingZero = False
         self.omitLastSemicolon = True
         self.paranthesisSpacer = u' '
         self.propertyNameSpacer = u' '
@@ -158,12 +158,12 @@ class Preferences(object):
         self.indent = u''
         self.keepComments = False
         self.keepEmptyRules = False
-        self.keepLeadingZero = False
         self.keepUnknownAtRules = False
         self.keepUsedNamespaceRulesOnly = True
         self.lineNumbers = False
         self.lineSeparator = u''
         self.listItemSpacer = u''
+        self.omitLeadingZero = True
         self.omitLastSemicolon = True
         self.paranthesisSpacer = u''
         self.propertyNameSpacer = u''
@@ -946,7 +946,7 @@ class CSSSerializer(object):
                 elif value.value == int(value.value):
                     # cut off after . which is zero anyway
                     val = unicode(int(value.value))
-                elif not self.prefs.keepLeadingZero and -1 < value.value < 1:
+                elif self.prefs.omitLeadingZero and -1 < value.value < 1:
                     v = unicode(value.value)
                     val = v
                     if value._sign == u'-':
