@@ -81,13 +81,13 @@ class PreferencesTestCase(basetest.BaseTestCase):
         self.assertEqual(cssutils.ser.prefs.keepAllProperties, True)
         self.assertEqual(cssutils.ser.prefs.keepComments, True)
         self.assertEqual(cssutils.ser.prefs.keepEmptyRules, False)
-        self.assertEqual(cssutils.ser.prefs.keepLeadingZero, True)
         self.assertEqual(cssutils.ser.prefs.keepUnknownAtRules, True)
         self.assertEqual(cssutils.ser.prefs.keepUsedNamespaceRulesOnly, False)
         self.assertEqual(cssutils.ser.prefs.lineNumbers, False)
         self.assertEqual(cssutils.ser.prefs.lineSeparator, u'\n')
         self.assertEqual(cssutils.ser.prefs.listItemSpacer, u' ')
         self.assertEqual(cssutils.ser.prefs.omitLastSemicolon, True)
+        self.assertEqual(cssutils.ser.prefs.omitLeadingZero, False)
         self.assertEqual(cssutils.ser.prefs.paranthesisSpacer, u' ')
         self.assertEqual(cssutils.ser.prefs.propertyNameSpacer, u' ')
         self.assertEqual(cssutils.ser.prefs.selectorCombinatorSpacer, u' ')
@@ -151,13 +151,13 @@ prefix|x, a + b > c ~ d, b {
         self.assertEqual(cssutils.ser.prefs.keepAllProperties, True)
         self.assertEqual(cssutils.ser.prefs.keepComments, False)
         self.assertEqual(cssutils.ser.prefs.keepEmptyRules, False)
-        self.assertEqual(cssutils.ser.prefs.keepLeadingZero, False)
         self.assertEqual(cssutils.ser.prefs.keepUnknownAtRules, False)
         self.assertEqual(cssutils.ser.prefs.keepUsedNamespaceRulesOnly, True)
         self.assertEqual(cssutils.ser.prefs.lineNumbers, False)
         self.assertEqual(cssutils.ser.prefs.lineSeparator, u'')
         self.assertEqual(cssutils.ser.prefs.listItemSpacer, u'')
         self.assertEqual(cssutils.ser.prefs.omitLastSemicolon, True)
+        self.assertEqual(cssutils.ser.prefs.omitLeadingZero, True)
         self.assertEqual(cssutils.ser.prefs.paranthesisSpacer, u'')
         self.assertEqual(cssutils.ser.prefs.propertyNameSpacer, u'')
         self.assertEqual(cssutils.ser.prefs.selectorCombinatorSpacer, u'')
