@@ -45,8 +45,12 @@ HEAD
       Issues are currently still at Google Code though.
 
     - Issue #53 feature request: Added new Preference option ``cssutils.ser.prefs.indentClosingBrace``. Defines if closing brace of block is indented to match indentation of the block (default) oder match indentation of selector.
+
 	- Fixed Issue #54 (thanks to Simon Sapin): Short hand like `#f80` color value object have correct red, green and blue property values now. Also ``hsl()`` and ``hsla()`` colors report (almost) correct values (due to rounding problems).
+
 	- Fixed Issue #55 (thanks to Simon Sapin): `outline-color` property was missing from validation.
+
+    - Feature request: Added new Preference option ``cssutils.ser.prefs.omitLeadingZero``. Defines if values between -1 and 1 should omit the 0, like ``.5px``. Minified settings do this, else 0 is kept by default.
 
 
 0.9.8a2 110611
